# sointu

./: .gitattributes  .gitignore  .gitpod.yml  4klang.go  BindConfig.txt  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  audio.go  audioexport.go  build_vst_plugin.ps1  build_vst_plugin_native.ps1  chords.wasm  convert.js  go.mod  go.sum  groove.wasm  groove.wat  instrument.go  multithread_edm.yml  order.go  package.json  patch.go  pattern.go  render.asm  renderwasm.mjs  score.go  sointu.go  song.go  synth.go  test.raw  test_chords.wat  testwasm.mjs  track.go  unit.go  unittype.go  write_envelexp_wav.ps1
.github/workflows/: binaries.yml  build.yml  ctest.yml  test.yml  tests.yml
4kp-convert/: file_format.py  tool.py
4kp-convert/tests/: test_file_format.py
audio/: convertbuffer.go
audio/oto/: otoplayer.go
bridge/: asmformat_test.go  bridge.go  bridge.go.in  bridge_test.go  init_windows.go  song_test.go
cmd/: default_service_native.go  default_service_other.go  main_synther_native.go  main_synther_not_native.go  midi_cgo.go  midi_not_cgo.go  synthers.go  synthers_native.go
cmd/sointu-cli/: main.go
cmd/sointu-compile/: main.go  server.go
cmd/sointu-generate/: main.go
cmd/sointu-nativetrack/: main.go
cmd/sointu-play/: main.go
cmd/sointu-track/: main.go
cmd/sointu-tracker/: main.go
cmd/sointu-vsti/: main.go  nameid_native.go  (+1 more)
compiler/: compiler.go  encoded_patch.go  encoded_song.go  encoded_song_test.go  featureset.go  featureset_macros.go  generate.go  macros.go  patterns.go  patterns_test.go  song_macros.go  x86_macros.go
examples/code/: CMakeLists.txt
examples/code/C/: CMakeLists.txt  cplay.unix.c  cplay.windows.c  cplay.windows.directsound.c  cplay.windows.winmm.c  cwav.c
examples/code/Python/: .gitignore  README.md  build.py  pyproject.toml  sointu.c  sointumodule.c
examples/code/Python/sointu_python/: __main__.py  sointu_python.spec
examples/code/asm/: CMakeLists.txt
examples/code/asm/386/: CMakeLists.txt  asmplay.elf32.asm  asmplay.win32.asm  asmwav.elf32.asm  asmwav.win32.asm
examples/code/asm/amd64/: CMakeLists.txt  asmplay.elf64.asm  asmwav.elf64.asm
examples/code/wasm/: README.md  index.html  test_chords.wasm
go4k/: algorithms.go  algorithms_test.go  asmformat.go  asmformat_test.go  go4k.go  macros.go  song.go  song_json_test.go  song_test.go
include/: sointu.h
oto/: convertbuffer.go  convertbuffer_test.go  oto.go
rpc/: rpc.go  rpc_test.go
scripts/: parse_gmdls.py
song/: song.go  song_test.go
src/: 4klang.asm  4klang.inc  CMakeLists.txt  gmdls.asm  introspection.asm  introspection_footer.inc  player.asm  sointu.asm  sointu.inc  sointu_footer.inc  sointu_header.inc
src/opcodes/: arithmetic.asm  arithmetic.inc  arithmetic_header.inc  effects.asm  effects.inc  effects_footer.inc  flowcontrol.asm  flowcontrol.inc  sinks.asm  sinks.inc  sinks_footer.inc  sinks_header.inc  sources.asm  sources.inc  sources_footer.inc  sources_header.inc
src/vsti/: 4klang.asm  CMakeLists.txt  Go4kVSTi.cpp  Go4kVSTi.def  Go4kVSTi.h  Go4kVSTi.rc  Go4kVSTi2.def  Go4kVSTi2.rc  Go4kVSTiCore.cpp  Go4kVSTiCore.h  Go4kVSTiGUI.cpp  Go4kVSTiGUI.h  Go4kVSTimain.cpp  Go4kVSTiproc.cpp  resource.h
src/vsti/audioeffect/: AEffEditor.hpp  AudioEffect.cpp  AudioEffect.hpp  audioeffectx.cpp  audioeffectx.h  vstcontrols.h  vstgui.h
src/win32/: gmdls_win32.asm
src/win64/: gmdls_win64.asm  gmdls_win64_footer.inc
templates/: arithmetic.asm  effects.asm  flowcontrol.asm  gmdls.asm  library.asm  patch.asm  player.asm  player.h  sinks.asm  sources.asm  structs.asm
tests/: CMakeLists.txt  groove.yaml  grooveisinthecode.js  test_add.asm  test_add.yml  test_add_stereo.asm  test_add_stereo.yml  test_addp.asm  test_addp.yml  test_addp_stereo.asm  test_addp_stereo.yml  test_aux.asm  test_aux.yml  test_aux_stereo.asm  test_aux_stereo.yml  test_belleq.yml  test_belleq_stereo.yml  test_chords.asm  test_chords.yml  test_clip.asm  test_clip.yml  test_clip_stereo.asm  test_clip_stereo.yml  test_compressor.asm  test_compressor.yml  test_compressor_stereo.asm  test_compressor_stereo.yml  test_crush.asm  test_crush.yml  test_crush_stereo.asm  test_crush_stereo.yml  test_dbgain.yml  test_dbgain_stereo.yml  test_delay.asm  test_delay.yml  test_delay_dampmod.asm  test_delay_dampmod.yml  test_delay_drymod.asm  test_delay_drymod.yml  test_delay_feedbackmod.asm  (+228 more)
tests/expected_output/: test_belleq_stereo.raw  test_chords.raw  test_clip.raw  test_clip_stereo.raw  test_compressor.raw  test_compressor_stereo.raw  test_crush.raw  test_crush_stereo.raw  test_dbgain_stereo.raw  test_delay.raw  test_delay_dampmod.raw  test_delay_drymod.raw  test_delay_feedbackmod.raw  test_delay_flanger.raw  test_delay_notetracking.raw  test_delay_notetracking_modulation.raw  test_delay_pregainmod.raw  test_delay_reverb.raw  test_delay_stereo.raw  test_diff_wasm_x86.raw  test_distort_mod.raw  test_dll.raw  test_dll_am_modulation.raw  test_dll_chorus.raw  test_dll_dm_modulation.raw  test_dll_fm_modulation.raw  test_dll_im_modulation.raw  test_dll_notetracking.raw  test_dll_pm_modulation.raw  test_dll_reverb.raw  test_dll_sm_modulation.raw  test_dll_stereo.raw  test_dst.raw  test_dst_modulation.raw  test_dst_sh.raw  test_dst_sh_modulation.raw  test_dst_stereo.raw  test_envelope.raw  test_envelope_16bit.raw  test_envelope_mod.raw  (+59 more)
tracker/: action.go  alert.go  basic_types.go  bool.go  broker.go  config.go  defaultsong.go  derived.go  detector.go  doc.go  draglist.go  files.go  gmdlsentries.go  gmdlsentry.go  history.go  iconcache.go  instrument.go  instruments.go  instruments_tracks.go  int.go  keyevent.go  label.go  layout.go  list.go  menu.go  midi.go  model.go  model_test.go  music.go  note.go  note_id.go  numericupdown.go  optional_int.go  order.go  panels.go  params.go  patterns.go  play.go  player.go  popup.go  (+30 more)
version/: version.go
vm/: bytecode.go  bytepatch.go  delaytable.go  doc.go  featureset.go  go_synth.go  go_synth_test.go  interpreter.go  interpreter_test.go  multithread_synth.go  opcodes.go  parallel_synth.go  patterns.go  patterns_test.go
(+523 files in other folders)
