[tool.poetry]
name = "sointu-python"
version = "0.1.0"
description = "Play back Sointu tracks in Python."
authors = ["Alexander Kraus <nr4@z10.info>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sointu_python" },
]
include = [
    { path = "sointu*.so", format="wheel" }
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0a3", "poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
